[gd_scene load_steps=3 format=3 uid="uid://bpdhutuhm42ot"]

[ext_resource type="Script" uid="uid://0q6coh8lj370" path="res://UI/upgrade_menu.gd" id="1_upgrade_menu"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" groups=["upgrade_menu"]]
layer = 200

[node name="UpgradeMenu" type="Control" parent="."]
process_mode = 2
z_index = 1000
layout_mode = 3
anchors_preset = 0
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
script = ExtResource("1_upgrade_menu")

[node name="Background" type="ColorRect" parent="UpgradeMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 176.0
offset_right = 320.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="UpgradeMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 70.0
offset_top = 26.0
offset_right = 570.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UpgradeMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "LEVEL UP!"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UpgradeMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="UpgradeContainer" type="VBoxContainer" parent="UpgradeMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeButton1" type="Button" parent="UpgradeMenu/Panel/VBoxContainer/UpgradeContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Upgrade Option 1"

[node name="UpgradeButton2" type="Button" parent="UpgradeMenu/Panel/VBoxContainer/UpgradeContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Upgrade Option 2"

[node name="UpgradeButton3" type="Button" parent="UpgradeMenu/Panel/VBoxContainer/UpgradeContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Upgrade Option 3"
